--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           >
             <p class="myafter"></p>
             <ul
-              class="ul w-0 h-0 transition-all overflow-hidden bg-white right-0 md:bg-transparent md:static md:text-white md:flex-row md:justify-end absolute md:w-[100%] font-Barlow text-Dark_grayish_blue top-20 flex flex-col gap-7 items-center py-14 z-20"
+              class="ul w-0 h-0 transition-all overflow-hidden bg-white right-[26px] md:bg-transparent md:static md:text-white md:flex-row md:justify-end absolute md:w-[100%] font-Barlow text-Dark_grayish_blue top-20 flex flex-col gap-7 items-center py-14 z-20"
             >
               <li class="cursor-pointer hover:text-black">About</li>
               <li class="cursor-pointer hover:text-black">Services</li>
@@ -55,7 +55,7 @@
           </div>
         </div>
         <h1
-          class="text-3xl md:text-6xl self-center w-[350px] md:w-full tracking-widest mt-24 md:mt-0 font-Fraunces uppercase text-white font-extrabold text-center"
+          class="text-3xl md:text-6xl self-center w-4/5 md:w-full tracking-widest mt-24 md:mt-0 font-Fraunces uppercase text-white font-extrabold text-center"
         >
           We are creatives
         </h1>
